
PROJECT (co_ws)

IF (CMAKE_SYSTEM_NAME MATCHES "Windows")
	file(GLOB SRC_H ../include/*.h ../include/impl/*.h)
	file(GLOB SRC_CPP ../src/*.cc)
ELSEIF (CMAKE_SYSTEM_NAME MATCHES "Linux")
	file(GLOB SRC_H ../include/*.h ../include/impl/*.h)
	file(GLOB SRC_CPP ../src/*.cc)
ENDIF (CMAKE_SYSTEM_NAME MATCHES "Windows")

IF (CMAKE_SYSTEM_NAME MATCHES "Linux")
	ADD_LIBRARY(co_ws SHARED ${SRC_CPP} ${SRC_H} ${SRC_ASM})
	TARGET_LINK_LIBRARIES( co_ws co_taro co_taro ssl )
ELSE (CMAKE_SYSTEM_NAME MATCHES "Linux")
	ADD_DEFINITIONS(-DTARO_USE_DLL)
	ADD_LIBRARY(co_ws SHARED ${SRC_CPP} ${SRC_H} ${SRC_ASM})
	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /SAFESEH:NO")
	if(CMAKE_CL_64)
		TARGET_LINK_LIBRARIES( co_ws co_taro ${OPENSSL}/Win64/lib/libssl.lib ${OPENSSL}/Win64/lib/libcrypto.lib )
	else(CMAKE_CL_64)
		TARGET_LINK_LIBRARIES( co_ws co_taro ${OPENSSL}/Win32/lib/libssl.lib ${OPENSSL}/Win32/lib/libcrypto.lib )
	endif(CMAKE_CL_64)
ENDIF (CMAKE_SYSTEM_NAME MATCHES "Linux")
